<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Penn Safety</string>
    <string name="emergency_lc">Emergency</string>
    <string name="emergency_start_text">Click the following button if there is an emergency:</string>
    <string name="emergency_start_button">EMERGENCY</string>
    <string name="emergency_call_button">EMERGENCY CONTACT</string>
    <string name="number_of_people_prompt">How many people are at the scene?</string>
    <string name="people_1">1</string>
    <string name="people_1_more">2 or more</string>
    <string name="emergency_call_text">Press the following button to call for help: </string>
    <string name="call_button">Press to Call</string>
    <string name="cpr_question_text">Is CPR needed?</string>
    <string name="cpr_yes">YES</string>
    <string name="cpr_no">NO</string>
    <string name="cpr_insn_title">CPR Instructions</string>
    <string name="cpr_insn_1">Place one hand on top of the other in center of chest</string>
    <string name="cpr_insn_2">Push downward hard and fast</string>
    <string name="cpr_insn_3">100 compressions per minute</string>
    <string name="cpr_insn_4">Continue until help arrives</string>
    <string name="get_aed_location_text">Click here for AED locations</string>
    <string name="emergency_wait">Please stay calm \n An ambulance is on its way</string>
    <string name="aed_insn_title">AED Instructions</string>
    <string name="aed_insn_1">Take AED to patient</string>
    <string name="aed_insn_2">Open lid of AED</string>
    <string name="aed_insn_3">AED will voice prompt use instructions</string>
    <string name="aed_insn_4">Tear open package and remove pads</string>
    <string name="aed_insn_5">Peel one pad from plastic liner</string>
    <string name="aed_insn_6">Place one pad on bare upper chest</string>
    <string name="aed_insn_7">Peel second pad and place on lower chest</string>
    <string name="aed_insn_8">Do not touch patient while AED is analyzing patient\'s heart rhythm</string>
    <string name="aed_insn_9">AED will voice prompt if shock is advised</string>
    <string name="aed_insn_10">Stand clear of patient if shock is advised</string>
    <string name="aed_insn_11">After shock AED will prompt users to continue CPR</string>
    <string name="title_fragment_emergency_main">Penn Emergency</string>
    <string name="title_activity_numberofpeople">How many are you ?</string>
    <string name="title_activity_aedinstructions">AED Instructions</string>
    <string name="title_activity_call">Call for Help</string>
    <string name="title_activity_need_cpr">Need CPR ?</string>
    <string name="title_activity_cprinstructions">Instructions to give CPR</string>
    <string name="title_activity_wait_for_help">Wait For Help</string>
    <string name="title_activity_aedmap">AED Locations</string>
    <string name="action_settings">Settings</string>
    <string name="title_fragment_contacts_main">Emergency Numbers</string>
    <string name="info_page">Organization Info</string>
    <string name="add_emergency_contact_button">Add Emergency Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_fragment_walk_timer_main">Walk timer</string>
    <string name="title_activity_walkTimer_map">Walk timer</string>
    <string name="walk_timer_main_text">Choose how you want to set up your timer and start walking</string>
    <string name="manual_walk_timer_button">Manual Walk Timer</string>
    <string name="dest_walk_timer_button">Destination Timer</string>
    <string name="manual_timer_title">Set Timer</string>
    <string name="manual_timer_message">Set Manual Time (In Seconds)</string>
    <string name="destination_timer_instruction">To select your destination, long click its location on the map.</string>
    <string name="destination_timer_instructions_title">How-to set your destination.</string>
    <string name="title_activity_setup_contacts">SetupContacts</string>
    <string name="title_fragment_instruciton_video">Instruction Video</string>
    <string name="title_fragment_location_track">Location Track</string>
    <string name="location_track_main_text">Location tracking has been started. This feature will let you know when you go out of the PennSafety service zone. Go to Settings to enable/disable notifications</string>
    <string name="walk_timer_map_unavailable">Service unavailable</string>
    <string name="walk_timer_map_unavailable_details">You can\'t use this service without a location tracker. Please enable your location service and try again.</string>
    <string name="gps_enable_alert_title">GPS Disabled...</string>
    <string name="gps_enable_alert_details">This app can use GPS to tell if you are in the range of area-limited services, and to use your location to provide you with the best services possible. Do you want to go to GPS settings? (Else network information will be used)"</string>
    <string name="main_navigation_exit_title">Exit application</string>
    <string name="main_navigation_exit_details">Are you sure you want to exit the application ?</string>
    <string name="walk_timer_dialog_minute_text">Min: </string>
    <string name="walk_timer_dialog_seconds_text">Sec: </string>

</resources>
