<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical"
              tools:context="com.android.pennaed.emergency.AEDInstructionsActivity">


    <TextView
        android:id="@+id/aed_insn_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/aed_insn_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/aed_insn_text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/aed_insn_1"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/aed_insn_text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/aed_insn_2"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/aed_insn_text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/aed_insn_3"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/aed_insn_text4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/aed_insn_4"
        android:textColor="#000000"
        android:textSize="20sp"/>


</LinearLayout>