<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.android.pennaed.emergency.CPRInstructionsActivity">

    <TextView
        android:id="@+id/cpr_insn_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/cpr_insn_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/cpr_insn_text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/cpr_insn_1"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/cpr_insn_text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/cpr_insn_2"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/cpr_insn_text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/cpr_insn_3"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/cpr_insn_text4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/cpr_insn_4"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/cpr_insn_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:src="@drawable/cpr_img"/>

    <Button
        android:id="@+id/aed_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center_horizontal"
        android:onClick="onClickAEDLocations"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/get_aed_location_text"
        android:textSize="25sp"
        android:textStyle="bold"/>

</LinearLayout>
