<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@android:color/background_light"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.android.pennaed.EmergencyActivity">

    <TextView
        android:id="@+id/emergency_start_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/emergency_start_text"
        android:textColor="#000000"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/emergency_start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_red_light"
        android:gravity="center_vertical|center_horizontal|fill_vertical"
        android:onClick="onClickEmergencyStart"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="false"
        android:text="@string/emergency_start_button"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/emergency_call_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical|center_horizontal|fill_vertical"
        android:onClick="onClickEmergencyCall"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="false"
        android:text="@string/emergency_call_button"
        android:textSize="25sp"
        android:textStyle="bold"/>
</LinearLayout>
