<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.android.pennaed.walkTimer.WalkTimerFragment">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.45"
        android:scaleType="centerCrop"
        android:src="@drawable/walk_background"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="50pt"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/walk_timer_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal"
            android:text="@string/walk_timer_main_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/manual_walk_timer_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_vertical|center_horizontal|fill_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="false"
            android:text="@string/manual_walk_timer_button"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dest_walk_timer_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_vertical|center_horizontal|fill_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="false"
            android:text="@string/dest_walk_timer_button"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>
